--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -3,6 +3,11 @@
 
 html {
   scroll-behavior: smooth;
+  font-size: 14px;
+
+  @include response(desktop) {
+    font-size: 20px;
+  }
 }
 
 body {
@@ -11,6 +16,7 @@ body {
 
 button {
   font-family: inherit;
+  font-size: inherit;
 }
 
 a {
