--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -8,7 +8,7 @@
   margin: 2em 0;
 
   &__title {
-    font-size: 2em;
+    font-size: 2.2em;
     font-weight: 300;
     letter-spacing: 1px;
   }
@@ -77,10 +77,6 @@
   @include response(desktop) {
     margin: 10em 0;
 
-    &__title {
-      font-size: 2.7em;
-    }
-
     &__list {
       padding-top: 8em;
     }
@@ -97,10 +93,6 @@
         height: 120px;
         width: 120px;
       }
-    }
-
-    &__text {
-      font-size: 1.4em;
     }
   }
 }
